result/0526-065813/stderr.log
In file included from /home/runner/work/pgi-2025-the_rosy_guardians/pgi-2025-the_rosy_guardians/src/features.c:5:
/home/runner/work/pgi-2025-the_rosy_guardians/pgi-2025-the_rosy_guardians/src/utils.h:6:2: error: unknown type name ‘pixelRGB’
    6 |  pixelRGB * get_pixel( unsigned char* data, const unsigned int width, const unsigned int height, const unsigned int n, const unsigned int x, const unsigned int y );
      |  ^~~~~~~~
/home/runner/work/pgi-2025-the_rosy_guardians/pgi-2025-the_rosy_guardians/src/utils.h:7:157: error: unknown type name ‘pixelRGB’
    7 |  void setPixel( unsigned char* data, const unsigned int width, const unsigned int height, const unsigned int n, const unsigned int x, const unsigned int y, pixelRGB* pixel);
      |                                                                                                                                                             ^~~~~~~~
gmake[2]: *** [CMakeFiles/freud.dir/build.make:93: CMakeFiles/freud.dir/src/features.c.o] Error 1
gmake[2]: *** Waiting for unfinished jobs....
In file included from /home/runner/work/pgi-2025-the_rosy_guardians/pgi-2025-the_rosy_guardians/src/main.c:9:
/home/runner/work/pgi-2025-the_rosy_guardians/pgi-2025-the_rosy_guardians/src/utils.h:6:2: error: unknown type name ‘pixelRGB’
    6 |  pixelRGB * get_pixel( unsigned char* data, const unsigned int width, const unsigned int height, const unsigned int n, const unsigned int x, const unsigned int y );
      |  ^~~~~~~~
/home/runner/work/pgi-2025-the_rosy_guardians/pgi-2025-the_rosy_guardians/src/utils.h:7:157: error: unknown type name ‘pixelRGB’
    7 |  void setPixel( unsigned char* data, const unsigned int width, const unsigned int height, const unsigned int n, const unsigned int x, const unsigned int y, pixelRGB* pixel);
      |                                                                                                                                                             ^~~~~~~~
gmake[2]: *** [CMakeFiles/freud.dir/build.make:107: CMakeFiles/freud.dir/src/main.c.o] Error 1
In file included from /home/runner/work/pgi-2025-the_rosy_guardians/pgi-2025-the_rosy_guardians/src/utils.c:6:
/home/runner/work/pgi-2025-the_rosy_guardians/pgi-2025-the_rosy_guardians/src/utils.h:6:2: error: unknown type name ‘pixelRGB’
    6 |  pixelRGB * get_pixel( unsigned char* data, const unsigned int width, const unsigned int height, const unsigned int n, const unsigned int x, const unsigned int y );
      |  ^~~~~~~~
/home/runner/work/pgi-2025-the_rosy_guardians/pgi-2025-the_rosy_guardians/src/utils.h:7:157: error: unknown type name ‘pixelRGB’
    7 |  void setPixel( unsigned char* data, const unsigned int width, const unsigned int height, const unsigned int n, const unsigned int x, const unsigned int y, pixelRGB* pixel);
      |                                                                                                                                                             ^~~~~~~~
/home/runner/work/pgi-2025-the_rosy_guardians/pgi-2025-the_rosy_guardians/src/utils.c: In function ‘getPixel’:
/home/runner/work/pgi-2025-the_rosy_guardians/pgi-2025-the_rosy_guardians/src/utils.c:9:9: error: ‘x’ undeclared (first use in this function)
    9 |     if (x>width || y>height || data=NULL) {
      |         ^
/home/runner/work/pgi-2025-the_rosy_guardians/pgi-2025-the_rosy_guardians/src/utils.c:9:9: note: each undeclared identifier is reported only once for each function it appears in
/home/runner/work/pgi-2025-the_rosy_guardians/pgi-2025-the_rosy_guardians/src/utils.c:9:11: error: ‘width’ undeclared (first use in this function)
    9 |     if (x>width || y>height || data=NULL) {
      |           ^~~~~
/home/runner/work/pgi-2025-the_rosy_guardians/pgi-2025-the_rosy_guardians/src/utils.c:9:20: error: ‘y’ undeclared (first use in this function)
    9 |     if (x>width || y>height || data=NULL) {
      |                    ^
/home/runner/work/pgi-2025-the_rosy_guardians/pgi-2025-the_rosy_guardians/src/utils.c:9:22: error: ‘height’ undeclared (first use in this function)
    9 |     if (x>width || y>height || data=NULL) {
      |                      ^~~~~~
/home/runner/work/pgi-2025-the_rosy_guardians/pgi-2025-the_rosy_guardians/src/utils.c:9:32: error: ‘data’ undeclared (first use in this function)
    9 |     if (x>width || y>height || data=NULL) {
      |                                ^~~~
/home/runner/work/pgi-2025-the_rosy_guardians/pgi-2025-the_rosy_guardians/src/utils.c:13:43: error: ‘n’ undeclared (first use in this function)
   13 |         return (pixelRGB *) &data[y*width*n+x] ;
      |                                           ^
/home/runner/work/pgi-2025-the_rosy_guardians/pgi-2025-the_rosy_guardians/src/utils.c: In function ‘setPixel’:
/home/runner/work/pgi-2025-the_rosy_guardians/pgi-2025-the_rosy_guardians/src/utils.c:25:2: error: expected declaration specifiers before ‘*’ token
   25 |  *
      |  ^
gmake[2]: *** [CMakeFiles/freud.dir/build.make:121: CMakeFiles/freud.dir/src/utils.c.o] Error 1
gmake[1]: *** [CMakeFiles/Makefile2:87: CMakeFiles/freud.dir/all] Error 2
gmake: *** [Makefile:136: all] Error 2

The process '/usr/local/bin/cmake' failed with exit code 2